--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -29,7 +29,18 @@
         /></abbr>
                 <input style="border: 1px solid rgba(247, 247, 247, 0.931)" type="text" name="mobile" placeholder="Type Mobile No" value="<%=locals.user.mobile%>" />
             </div>
-            <button>Save</button>
+            <div style="
+          background-color: transparent;
+          width: 100%;
+          min-width: 100%;
+          padding: 10px;
+          margin: 0px;
+          box-sizing: border-box;
+          display: block;
+          text-align: right;
+        ">
+                <button style="width: 50px; position: relative">Save</button>
+            </div>
         </form>
     </div>
 </div>
