--- a/views/new_alert_page.ejs
+++ b/views/new_alert_page.ejs
@@ -13,7 +13,19 @@
             <div id="message-div">
                 alert will disappear after 24 hr, for specified time choose time of deletion
             </div>
-            <button id="post-btn">Post</button>
+            <div style="
+          background-color: transparent;
+          width: 100%;
+          min-width: 100%;
+          padding: 10px;
+          margin: 0px;
+          box-sizing: border-box;
+          display: block;
+          text-align: right;
+        ">
+                <button style="width: 50px; position: relative">Post</button>
+            </div>
+            <!-- <button id="post-btn">Post</button> -->
         </form>
     </div>
 </div>
