--- a/views/new_event_page.ejs
+++ b/views/new_event_page.ejs
@@ -46,7 +46,18 @@
             <div id="show-location" style="height: 300px; width: 600px; display: none"></div>
 
             <input type="text" name="caption" placeholder="Type Caption here" style="border: 1px solid whitesmoke" />
-            <button>Post</button>
+            <div style="
+          background-color: transparent;
+          width: 100%;
+          min-width: 100%;
+          padding: 10px;
+          margin: 0px;
+          box-sizing: border-box;
+          display: block;
+          text-align: right;
+        ">
+                <button style="width: 50px; position: relative">Post</button>
+            </div>
         </form>
     </div>
 </div>
