--- a/views/new_poll_page.ejs
+++ b/views/new_poll_page.ejs
@@ -14,8 +14,17 @@
                 <input type="text" name="yes_option" placeholder="YES" value="YES" style="color: rgb(88, 160, 88)" />
                 <input type="text" name="no_option" placeholder="NO" value="NO" style="color: rgb(201, 124, 93)" />
             </div>
-            <div>
-                <button type="submit" id="submit" class="btn btn-primary">Add</button>
+            <div style="
+          background-color: transparent;
+          width: 100%;
+          min-width: 100%;
+          padding: 10px;
+          margin: 0px;
+          box-sizing: border-box;
+          display: block;
+          text-align: right;
+        ">
+                <button style="width: 50px; position: relative">Add</button>
             </div>
         </form>
     </div>
