--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -58,6 +58,8 @@
                     <span>Staff</span>
                     <input type="radio" name="tick" value="Club" />
                     <span>Club</span>
+                    <input type="radio" name="tick" value="Hostel" />
+                    <span>Hostel</span>
                     <br />
                     <br />
                     <button style="margin-left: 45px">Sign-in</button>
