--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -11,6 +11,8 @@
         <span>Staff</span>
         <input type="radio" name="tick" value="Club" />
         <span>Club</span>
+        <input type="radio" name="tick" value="Hostel" />
+        <span>Hostel</span>
         <input type="submit" value="Sign-Up" />
     </form>
 </div>
