--- a/assets/css/comment.css
+++ b/assets/css/comment.css
@@ -7,6 +7,11 @@
   display: none;
   box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
   transition: 0.4;
+  transition: 0.4;
+}
+
+.comment-container:hover {
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
 }
 
 .comment-container #comment-head {
