--- a/assets/css/new_post.css
+++ b/assets/css/new_post.css
@@ -43,6 +43,10 @@
   width: 100%;
   border-bottom: 1px solid #4c4cd8;
   text-align: center;
+  padding: 0px 30px 0px 30px;
+  box-sizing: border-box;
+  word-wrap: break-word;
+  overflow: hidden;
 }
 
 #new-post div,
@@ -153,10 +157,10 @@
   padding: 5px 10px 5px 10px;
   font-weight: 700;
   color: white;
+  display: inline-block;
   width: 50px;
+  max-width: 150px;
   position: relative;
-  top: 3%;
-  left: 90%;
   background-color: #0a66c2;
   border-color: #0a66c2;
 }
