--- a/assets/css/option-page.css
+++ b/assets/css/option-page.css
@@ -40,15 +40,17 @@
   font-size: 14;
   border-radius: 20%/50%;
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
 }
 
 #option-page #option-header span:hover {
   box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
+  border: 2px solid royalblue;
 }
 
 #option-page #option-header .active {
-  border: 2px solid rgba(41, 41, 41, 0.705);
-  background-color: darkgrey;
+  border: 2px solid green;
+  background-color: #a7a4a4;
   color: white;
   box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
 }
