--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -4,3 +4,30 @@
   height: auto;
   min-height: 150px;
 }
+
+#team-contaainer {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  overflow: hidden;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
+}
+
+#team-contaainer:hover {
+  box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.2);
+}
+
+.tem-member-edit-option {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.tem-member-edit-option a {
+  text-decoration: none;
+  color: black;
+  font-size: 25;
+  font-weight: 900;
+}
