--- a/assets/scss/comment.scss
+++ b/assets/scss/comment.scss
@@ -7,6 +7,10 @@
     display: none;
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.4;
+    &:hover {
+        box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
+    }
+    transition: 0.4;
     #comment-head {
         color: rgb(77, 77, 236);
         padding: 10px 0px 0px 10px;
