--- a/assets/scss/event-page.scss
+++ b/assets/scss/event-page.scss
@@ -9,11 +9,15 @@
     }
     #events-container {
         background-color: rgba(131, 128, 128, 0.52);
-        position: relative;
+        background-color: rgb(131, 128, 128);
+        // position: relative;
+        position: sticky;
         width: 100%;
         margin: auto;
-        top: -15px;
+        // top: -15px;
+        top: 52px;
         height: auto;
+        z-index: 4;
         box-shadow: 0px 3px 3px 3px rgba(48, 47, 47, 0.479);
         #events-head {
             display: flex;
@@ -35,7 +39,7 @@
                 }
             }
             .active-tab {
-                background-color: rgba(88, 88, 88, 0.74);
+                background-color: rgba(88, 88, 88, 0.863);
                 border-bottom: 3px solid black;
                 color: white;
             }
