--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -316,11 +316,33 @@
     flex-wrap: wrap;
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.4;
+     ::-webkit-scrollbar {
+        width: 5px;
+        /* width of the entire scrollbar */
+    }
+     ::-webkit-scrollbar-track {
+        /* background: orange; */
+        // background: royalblue;
+        /* color of the tracking area */
+    }
+     ::-webkit-scrollbar-thumb {
+        /* background-color: blue; */
+        /* color of the scroll thumb */
+        border-radius: 35px;
+        background-color: darkgrey;
+        // background-color: rgba(65, 105, 225, 0.719);
+        /* roundness of the scroll thumb */
+        /* border: 3px solid orange; */
+        /* creates padding around scroll thumb */
+    }
     &:hover {
         box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
     }
     #all_event {
-        transition: 0.4;
+        height: auto;
+        max-height: 0px;
+        overflow: auto;
+        transition: max-height 1s ease-in-out;
     }
     #event-header {
         display: flex;
