--- a/assets/scss/my-profile-page.scss
+++ b/assets/scss/my-profile-page.scss
@@ -115,41 +115,57 @@
     }
 }
 
-#contact {
-    display: none;
-    #details {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 100%;
-        flex-direction: column;
-        // background-color: red;
-        justify-content: flex-start;
-        align-items: flex-start;
-        div {
-            // background-color: green;
+#contact-container {
+    &:hover {
+        box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2) !important;
+    }
+    background-color: white;
+    height: auto;
+    max-height: 0px;
+    transition: max-height 0.9s linear;
+    transition-delay: 0;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    #contact {
+        height: inherit;
+        display: inline-block;
+        box-shadow: none;
+        #details {
             display: flex;
-            flex-direction: row;
-            justify-content: center;
             flex-wrap: wrap;
-            max-width: 95%;
-            a {
-                text-decoration: none;
-                color: black;
-            }
-            #span-link-whatsapp,
-            #span-link-mobile,
-            #span-link-email {
-                max-width: 90%;
-                overflow-wrap: break-word;
-                font-size: 21;
-                padding: 10px;
-                &:hover {
-                    color: royalblue;
-                    border-bottom: 1px solid royalblue;
+            max-width: 100%;
+            flex-direction: column;
+            // background-color: red;
+            justify-content: flex-start;
+            align-items: flex-start;
+            div {
+                // background-color: green;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                flex-wrap: wrap;
+                max-width: 95%;
+                a {
+                    text-decoration: none;
+                    color: black;
                 }
-            }
-            abbr {
-                padding: 5px;
+                #span-link-whatsapp,
+                #span-link-mobile,
+                #span-link-email {
+                    max-width: 90%;
+                    overflow-wrap: break-word;
+                    font-size: 21;
+                    padding: 10px;
+                    &:hover {
+                        color: royalblue;
+                        border-bottom: 1px solid royalblue;
+                    }
+                }
+                abbr {
+                    padding: 5px;
+                }
             }
         }
     }
