--- a/assets/scss/new_post.scss
+++ b/assets/scss/new_post.scss
@@ -34,6 +34,10 @@
         width: 100%;
         border-bottom: 1px solid rgb(76, 76, 216);
         text-align: center;
+        padding: 0px 30px 0px 30px;
+        box-sizing: border-box;
+        word-wrap: break-word;
+        overflow: hidden;
     }
     div {
         margin: auto;
@@ -110,10 +114,10 @@
                 padding: 5px 10px 5px 10px;
                 font-weight: 700;
                 color: white;
+                display: inline-block;
                 width: 50px;
+                max-width: 150px;
                 position: relative;
-                top: 3%;
-                left: 90%;
                 background-color: #0a66c2;
                 border-color: #0a66c2;
                 &:hover {
