--- a/assets/scss/option-page.scss
+++ b/assets/scss/option-page.scss
@@ -95,13 +95,16 @@
             font-size: 14;
             border-radius: 20%/50%;
             box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease-in-out;
             &:hover {
                 box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
+                border: 2px solid royalblue;
             }
         }
         .active {
-            border: 2px solid rgba(41, 41, 41, 0.705);
-            background-color: darkgrey;
+            border: 2px solid green;
+            // border: 2px solid rgba(41, 41, 41, 0.705);
+            background-color: rgb(167, 164, 164);
             color: white;
             box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
         }
