--- a/assets/scss/team.scss
+++ b/assets/scss/team.scss
@@ -9,3 +9,28 @@
     //     height: 600px;
     // }
 }
+
+#team-contaainer {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    overflow: hidden;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
+    &:hover {
+        box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.2);
+    }
+}
+
+.tem-member-edit-option {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    a {
+        text-decoration: none;
+        color: black;
+        font-size: 25;
+        font-weight: 900;
+    }
+}
