--- a/views/home.ejs
+++ b/views/home.ejs
@@ -187,8 +187,8 @@
             <span><%=upcomingOrRunningEvents.length%></span>
         </div>
         <div onclick="toggleEventsVisibality('all_event')">
-            <img height="20px" width="20px" id="arrow-down" src="https://cdn-icons-png.flaticon.com/512/32/32195.png" alt="toggle" style="display: inline" />
-            <img height="20px" width="20px" id="arrow-up" src="https://cdn-icons-png.flaticon.com/512/271/271239.png" alt="toggle" style="display: none" />
+            <!-- <img height="20px" width="20px" id="arrow-down" src="https://cdn-icons-png.flaticon.com/512/32/32195.png" alt="toggle" style="display: inline" /> -->
+            <img style="transition: all 1s linear" height="20px" width="20px" id="arrow-up" src="https://cdn-icons-png.flaticon.com/512/271/271239.png" alt="toggle" />
         </div>
     </div>
     <div id="all_event">
