--- a/views/text_post_page.ejs
+++ b/views/text_post_page.ejs
@@ -8,7 +8,18 @@
         <form action="/creator/new-text-post" method="POST">
             <textarea maxlength="10000" name="content" id="" required cols="30" rows="10" placeholder="Start Writing here" style="border: 1px solid rgb(224, 214, 214); padding: 5px"></textarea>
             <input type="text" name="caption" placeholder="Type Caption here" style="border: 1px solid whitesmoke" />
-            <button>Post</button>
+            <div style="
+          background-color: transparent;
+          width: 100%;
+          min-width: 100%;
+          padding: 10px;
+          margin: 0px;
+          box-sizing: border-box;
+          display: block;
+          text-align: right;
+        ">
+                <button style="width: 50px; position: relative">Post</button>
+            </div>
         </form>
     </div>
 </div>
